Fixed input spacing.

--- a/css/template.less
+++ b/css/template.less
@@ -144,7 +144,7 @@ div.topBar{
     border-radius:@borderRadius;
     padding:@textPadding;
     box-shadow:inset 0px 0px 3px @lightGray;
-    border: 5px solid rgba(0,0,0,0);
+    margin:0.3em 0 0.3em 0;
 }
 
 input{
